apps/modresort/overlay/00_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modresort-deployment
  labels:
    app: modresort
spec:
  selector:
    matchLabels:
      app: modresortchan
      release: modresort-devchan
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: modresortchan
        release: modresort-devchan
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: "kpostreich/modresort:1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
